# libfreemkv

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  LICENSE  Makefile  README.md  TROUBLESHOOTING.md  build.rs  profiles.json
.github/ISSUE_TEMPLATE/: bug_report.md  drive_profile.md  feature_request.md
.github/workflows/: ci.yml  release.yml  update-readme.yml
benches/: sgio_read.rs
docs/: FVI_FORMAT.md  README.md  aacs.md  api-design.md  architecture.md  clpi.md  disc-to-rip.md  drive-access.md  mkv-muxer-plan.md  mpls.md  rip-recovery.md  udf.md
examples/: iso_dump.rs  probe3d_deint.rs  probe3d_struct.rs
src/: aacs.rs  aacs_handshake.rs  clpi.rs  consts.rs  decrypt.rs  diag.rs  disc.rs  drive.rs  error.rs  event.rs  halt.rs  hex.rs  identity.rs  ifo.rs  jar.rs  keydb.rs  keysource.rs  lib.rs  mpls.rs  pes.rs  profile.rs  progress.rs  scsi.rs  sector.rs  speed.rs  udf.rs  unlock.rs  unlock_bridge.rs  verify.rs
src/aacs/: boil.rs  builtin_keys.rs  content.rs  crypto.rs  decrypt.rs  derive.rs  handshake.rs  host_certs.rs  index_select.rs  inf.rs  keydb.rs  keys.rs  media_key.rs  mkb.rs  mod.rs  provider.rs  resolve.rs  segment.rs  segment_key.rs  trace.rs  types.rs  variant.rs  variant_select.rs  variants.rs  volume_key.rs
src/css/: auth.rs  crack.rs  lfsr.rs  mod.rs  stevenson.rs  tables.rs
src/disc/: bluray.rs  dvd.rs  dvd_audio_probe.rs  encrypt.rs  extract.rs  hddvd.rs  mapfile.rs  mod.rs  patch.rs  pgs_forced_probe.rs  read_error.rs  section_recover.rs  sweep.rs  sweep_pipeline.rs  verify.rs
src/drive/: capture.rs  linux.rs  macos.rs  mod.rs  unix.rs  windows.rs
src/drm/: mod.rs
src/dvdnav/: mod.rs  vmcmd.rs
src/io/: bounded.rs  byte_channel.rs  byte_prefetcher.rs  mod.rs  pipeline.rs  platform_macos.rs  writeback.rs  writeback_file.rs  writer.rs
src/io/file_sector_source/: linux.rs  macos.rs  mod.rs  other.rs  windows.rs
src/io/fsync/: mod.rs  posix.rs  windows.rs
src/io/sink/: local_file.rs  mod.rs  socket.rs
src/io/sink/preallocate/: linux.rs  macos.rs  mod.rs  other.rs
src/io/writeback/: linux.rs  noop.rs
src/io/writeback_file/: linux.rs  macos.rs  mod.rs  other.rs  windows.rs
src/labels/: bdmt.rs  bluray_project.rs  class_reader.rs  clpi_audit.rs  criterion.rs  ctrm.rs  dbp.rs  deluxe.rs  jar.rs  language_streams.rs  menu_base.rs  mod.rs  mpls_universal.rs  paramount.rs  pixelogic.rs  png_filenames.rs  stream_properties.rs  text.rs  vocab.rs  xml.rs
src/mux/: au_assembly.rs  demux_sink.rs  demux_thread.rs  disc.rs  ebml.rs  fvi_sink.rs  iso.rs  isowriter.rs  lookahead.rs  m2ts.rs  meta.rs  meta_sink.rs  mkv.rs  mkvout.rs  mkvstream.rs  mod.rs  network.rs  null.rs  pesout.rs  pipelined_stream.rs  ps.rs  resolve.rs  resync.rs  stdio.rs  stream.rs  timeline.rs  ts.rs  tsmux.rs  tsreader.rs  videomap.rs
src/mux/codec/: ac3.rs  adts.rs  coding.rs  crc.rs  dropgate.rs  dts.rs  dvdsub.rs  flac.rs  h264.rs  hevc.rs  lpcm.rs  mod.rs  mpeg2.rs  mpegaudio.rs  pgs.rs  reorder.rs  startcode.rs  truehd.rs  vc1.rs
src/mux/fmp4/: mod.rs
src/mux/hevc/: mod.rs
src/mux/m2ts_mux/: mod.rs  packet.rs
src/mux/mp4/: audio.rs  boxes.rs  mod.rs  read.rs
src/platform/: mod.rs  mt1959.rs
src/platform/fs_type/: linux.rs  macos.rs  mod.rs  other.rs  windows.rs
src/platform/mt1959/: mod.rs  variant_a.rs  variant_b.rs
src/scsi/: linux.rs  macos.rs  macos_shim.c  mod.rs  windows.rs
src/sector/: decrypting.rs  file.rs  mod.rs  prefetched.rs  recovery.rs
tests/: crypto_tests.rs  disc_tests.rs  fvi_pipeline.rs  integration_progress_and_halt.rs  pass_n_patch_fix.rs  pass_n_size_aware_skip.rs  passn_handler_ab.rs  scsi_error_decoding.rs  scsi_recovery.rs  streams.rs  udf_tests.rs
